--- a/Contacts.html
+++ b/Contacts.html
@@ -7,18 +7,68 @@
     <link rel="stylesheet" href="./Contacts.css" type="text/css">
 </head>
 <body>
-
+<!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
     <header>
-        <div>
+        <aside class="left-logo-mode">
             <img src="./my-logo (1).svg" alt="My Logo">
-        </div>
+            <div class="mode-with-logo">
+                <div class="mode">
+                    <input type="checkbox" id="lightMode">
+                    <label for="lightMode"></label>
+                </div>
+                <p id="modeTitle"class="light-mode-text">Dark Mode</p>
+            </div>
+</aside>
+<!--👇👇👇-Main Content-👇👇👇-Start-👇👇👇-->
         <ul class="nav-link">
           <li><a href="./index.html" class="non-active">Home</a></li>
           <li><a href="./About.html" class="non-active">About</a></li>
           <li><a href="./Portfolio.html" class="non-active">Portfolio</a></li>
           <li><a href="./Contacts.html" class="active">Contact</a></li>
         </ul>
-    </header>
-    
+    </header><!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
+<!--👇👇👇-Main Content-👇👇👇-Start-👇👇👇-->
+    <section class="main-content">
+        <div class="main-content-text-box">
+            <p class="text-box-title">Have A Project?<span>Contact</span>Me ✋</p>
+            <p class="text-box-text">Send me an email and i will get back to you.<span>IF I CAN!😅</span></p>
+        </div>
+<!--👇👇👇-Form-👇👇👇-Start-👇👇👇-->
+        <div class="form-container">
+            <div class="short-form">
+                <p class="form-label">Your Name</p>
+                <div class="short-input-container">
+                    <input type="text" placeholder="Type Your Name">
+                </div>
+            </div>
+            <div class="short-form">
+                <p class="form-label">Your Email</p>
+                <div class="short-input-container">
+                    <input type="text" placeholder="Type Your Email">
+                </div>
+            </div>
+            <div class="long-form">
+                <p class="form-label">Your Message</p>
+                <div class="long-input-container">
+                    <textarea placeholder="Type Your Message"></textarea>
+                </div>
+            </div> 
+            <div class="btn-container">
+                <button id="sendMsgBtn" class="send-msg-btn">Send the Message</button>
+            </div>
+        </div>
+    <hr class="line"><!---Form👈👈👈-Form-👈👈👈👈👈👈-->
+<!-- -👇👇👇-Footer-👇👇👇-Start-👇👇👇--->
+<div class="footer">
+    <p class="footer-txt">Find me</p>
+    <div class="footer-icons">
+        <div><a href="https://www.instagram.com/the_cocktail_tree/ "><img src="./instagram-icon.svg" alt="Instagram Logo" class="icons" /></a> </DIv>
+        <div><a href="https://www.linkedin.com/company/the-cocktail-tree/?"><img src="./linkedin-icon.svg" alt="LinkedIn Logo" class="icons" /></a></div>
+        <div><a href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"><img src="./tiktok-icon.svg" alt="TikTok Logo" class="icons" /></a></div>
+        <div><a href="https://wa.me/971585155667"><img src="./whatsapp-icon.svg" alt="What'sapp Logo" class="icons" /></a></div>
+    </div>
+</div><!---☝☝☝-Footer-☝☝☝-end-☝☝☝-- -->
+    </section>
+    <script src="./contacts.js"></script>
 </body>
 </html>
