Better organizaton of files

--- a/About.html
+++ b/About.html
@@ -1,75 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Vardges</title>
-    <link rel="stylesheet" href="./About.css" type="text/css">
-</head>
-<body>
-<!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
-<header>
-    <aside class="left-logo-mode">
-      <a href="./index.html"><img src="./icons/the-logo-light-mode.svg" alt="My Logo" id="logoIcon"></a>
-        
+    <link rel="stylesheet" href="./About.css" type="text/css" />
+  </head>
+  <body data-mode="light">
+    <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
+    <header>
+      <aside class="left-logo-mode">
+        <a href="./index.html"
+          ><img
+            src="./icons/the-logo-light-mode.svg"
+            alt="My Logo"
+            id="logoIcon"
+        /></a>
+
         <div class="mode-with-logo">
-            <div class="mode">
-                <input type="checkbox" id="lightMode">
-                <label for="lightMode"></label>
-            </div>
-            <p id="modeTitle"class="light-mode-text">Cool Mode</p>
+          <div class="mode">
+            <input type="checkbox" id="lightMode" />
+            <label for="lightMode"></label>
+          </div>
+          <p id="modeTitle" class="light-mode-text">Cool Mode</p>
         </div>
-  </aside>
-    <ul class="nav-link">
-      <li><a href="./index.html" class="non-active">Home</a></li>
-      <li><a href="./About.html" class="active">About</a></li>
-      <li><a href="./Portfolio.html" class="non-active">Portfolio</a></li>
-      <li><a href="./Contacts.html" class="non-active">Contact</a></li>
-    </ul>
-  </header>
-  <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
+      </aside>
+      <ul class="nav-link">
+        <li><a href="./index.html" class="non-active">Home</a></li>
+        <li><a href="./About.html" class="active">About</a></li>
+        <li><a href="./Portfolio.html" class="non-active">Portfolio</a></li>
+        <li><a href="./Contacts.html" class="non-active">Contact</a></li>
+      </ul>
+    </header>
+    <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
     <div class="about">
-<div class="main-img">
-        <img src="./images/my-Face-light-mode.png" alt="Vardges's face" id="myAvatar">
-    </div>
+      <div class="main-img">
+        <img
+          src="./images/my-Face-light-mode.png"
+          alt="Vardges's face"
+          id="avatarHomePage" />
+      </div>
       <h1 class="about-title">About Me</h1>
-        <div class="about-text">
-            <p>
-                Hi, I'm Vardges, a hospitality expert turned coding newbie, 
-                with a flair for creating delightful experiences. My journey 
-                in the hospitality world has equipped me with a keen eye for 
-                detail and a love for crafting exceptional moments. Now, I'm 
-                bringing that same passion to the digital realm. In just a week, 
-                I've dived into HTML, CSS, JavaScript, and other tools, learning 
-                to create engaging user experiences. My background in mixology 
-                taught me how to mix the perfect drink, and now I’m mixing code 
-                to build seamless websites.
-            </p>
-            <p>
-                On the back-end, I'm exploring PHP, Python, 
-                and database management to ensure every site I 
-                touch is robust and efficient. I thrive on transforming 
-                complex problems into elegant solutions and continually 
-                push the boundaries of web development. Whether working 
-                on a small project or a large-scale application, my goal 
-                is to deliver results that exceed expectations, just like 
-                the perfect cocktail.
-            </p>
+      <div class="about-text">
+        <p>
+          Hi, I'm Vardges, a hospitality expert turned coding newbie, with a
+          flair for creating delightful experiences. My journey in the
+          hospitality world has equipped me with a keen eye for detail and a
+          love for crafting exceptional moments. Now, I'm bringing that same
+          passion to the digital realm. In just a week, I've dived into HTML,
+          CSS, JavaScript, and other tools, learning to create engaging user
+          experiences. My background in mixology taught me how to mix the
+          perfect drink, and now I’m mixing code to build seamless websites.
+        </p>
+        <p>
+          On the back-end, I'm exploring PHP, Python, and database management to
+          ensure every site I touch is robust and efficient. I thrive on
+          transforming complex problems into elegant solutions and continually
+          push the boundaries of web development. Whether working on a small
+          project or a large-scale application, my goal is to deliver results
+          that exceed expectations, just like the perfect cocktail.
+        </p>
+      </div>
+      <div class="btns-container">
+        <div class="btnContainer">
+          <button id="hireMeBtn" class="hire-me-btn">Hire me</button>
         </div>
-        <div class="btns-container">
-            <div class="btnContainer">
-              <button 
-              id="hireMeBtn" 
-              class="hire-me-btn">Hire me</button>
-          </div>
-            <div class="btnContainer">
-              <button 
-              id="letsTalkBtn" 
-              class="lets-talk-btn">Lets Talk</button>
-            </div>            
-          </div>
-     </div>
-<hr class="line">
+        <div class="btnContainer">
+          <button id="letsTalkBtn" class="lets-talk-btn">Lets Talk</button>
+        </div>
+      </div>
+    </div>
+    <hr class="line" />
     <section class="container">
       <div class="exp-container-left">
         <h2 class="exp-title">Experience</h2>
@@ -84,85 +85,117 @@
         <div class="circle-4"></div>
         <div class="border-4"></div>
       </div>
-        <div class="exp-container-right">
-            <Div class="exp">
-                <h4 class="exp-position">Marketing & Business Development Director</h4>
-                <div class="exp-subtitle">
-                    <p class="exp-org-name">Vkusno Russian Kitchen</p>
-                    <ul class="exp-timeline">
-                        <li>May 2024 - Present, Dubai, UAE</li>
-                    </ul>
-                </div>
-                <p class="exp-description">
-                    As Marketing & Business Development Director 
-                    for Vkusno, I spearhead strategies to expand 
-                    our cloud kitchen network across Dubai. 
-                    I analyze performance metrics, drive business 
-                    growth, and enhance our brand’s 
-                    reach in the competitive food delivery market.
-                </p>
-            </Div>
-            <Div class="exp">
-                <h4 class="exp-position">Founder</h4>
-                <div class="exp-subtitle">
-                     <p class="exp-org-name">The Cocktail Tree</p>
-                    <ul class="exp-timeline">
-                        <li>January 2022 - Present, Dubai, UAE</li>
-                    </ul>
-                </div>
-                <p class="exp-description">
-                    I founded The Cocktail Tree to revolutionize 
-                    beverages, merging mixology expertise with innovative 
-                    solutions. I lead the team, oversee product development, 
-                    and drive our mission to simplify the beverage industry for bars, 
-                    restaurants, and enthusiasts.
-                </p>
-            </Div>
-            <Div class="exp">
-                <h4 class="exp-position">Bar Manager</h4>
-                <div class="exp-subtitle">
-                    <p class="exp-org-name">Vkusno Russian Kitchen</p>
-                    <ul class="exp-timeline">
-                        <li>2018 - 2024, Dubai, UAE</li>
-                    </ul>
-                </div>
-                <p class="exp-description">
-                    At BFF Sports Bar, I blend management with creativity, 
-                    ensuring every guest's experience is memorable. I innovate 
-                    the beverage menu, mentor staff, and organize special events, 
-                    all while keeping operations smooth and efficient in Dubai’s 
-                    vibrant bar scene.
-                </p>
-            </Div>
-            <Div class="exp">
-                <h4 class="exp-position">Group Bar Manager</h4>
-                <div class="exp-subtitle">
-                    <p class="exp-org-name">Subah Group</p>
-                    <ul class="exp-timeline">
-                        <li>2018, Abu Dhabi, UAE</li>
-                    </ul>
-                </div>
-                <p class="exp-description">
-                   In this role at Sheraton Al Khalidiya Hotel, I 
-                   managed over 20 outlets, focusing on strategy and 
-                   customer service. Leading large teams and innovating service 
-                   procedures, I drove business growth and efficiency across Abu Dhabi’s 
-                   hospitality landscape.
-                </p>
-            </Div>
+      <div class="exp-container-right">
+        <div class="exp">
+          <h4 class="exp-position">
+            Marketing & Business Development Director
+          </h4>
+          <div class="exp-subtitle">
+            <p class="exp-org-name">Vkusno Russian Kitchen</p>
+            <ul class="exp-timeline">
+              <li>May 2024 - Present, Dubai, UAE</li>
+            </ul>
+          </div>
+          <p class="exp-description">
+            As Marketing & Business Development Director for Vkusno, I spearhead
+            strategies to expand our cloud kitchen network across Dubai. I
+            analyze performance metrics, drive business growth, and enhance our
+            brand’s reach in the competitive food delivery market.
+          </p>
         </div>
+        <div class="exp">
+          <h4 class="exp-position">Founder</h4>
+          <div class="exp-subtitle">
+            <p class="exp-org-name">The Cocktail Tree</p>
+            <ul class="exp-timeline">
+              <li>January 2022 - Present, Dubai, UAE</li>
+            </ul>
+          </div>
+          <p class="exp-description">
+            I founded The Cocktail Tree to revolutionize beverages, merging
+            mixology expertise with innovative solutions. I lead the team,
+            oversee product development, and drive our mission to simplify the
+            beverage industry for bars, restaurants, and enthusiasts.
+          </p>
+        </div>
+        <div class="exp">
+          <h4 class="exp-position">Bar Manager</h4>
+          <div class="exp-subtitle">
+            <p class="exp-org-name">Vkusno Russian Kitchen</p>
+            <ul class="exp-timeline">
+              <li>2018 - 2024, Dubai, UAE</li>
+            </ul>
+          </div>
+          <p class="exp-description">
+            At BFF Sports Bar, I blend management with creativity, ensuring
+            every guest's experience is memorable. I innovate the beverage menu,
+            mentor staff, and organize special events, all while keeping
+            operations smooth and efficient in Dubai’s vibrant bar scene.
+          </p>
+        </div>
+        <div class="exp">
+          <h4 class="exp-position">Group Bar Manager</h4>
+          <div class="exp-subtitle">
+            <p class="exp-org-name">Subah Group</p>
+            <ul class="exp-timeline">
+              <li>2018, Abu Dhabi, UAE</li>
+            </ul>
+          </div>
+          <p class="exp-description">
+            In this role at Sheraton Al Khalidiya Hotel, I managed over 20
+            outlets, focusing on strategy and customer service. Leading large
+            teams and innovating service procedures, I drove business growth and
+            efficiency across Abu Dhabi’s hospitality landscape.
+          </p>
+        </div>
+      </div>
     </section>
-<hr class="line">
-<!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
+    <hr class="line" />
+    <!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
     <div class="footer">
-        <p class="footer-txt">Find me</p>
-        <div class="footer-icons">
-            <div><a href="https://www.instagram.com/the_cocktail_tree/ "><img src="./icons/instagram-icon-light-mode.svg" alt="Instagram Logo" class="icons" id="instagramLogo"/></a> </DIv>
-            <div><a href="https://www.linkedin.com/company/the-cocktail-tree/?"><img src="./icons/linkedin-icon-light-mode.svg" alt="LinkedIn Logo" class="icons" id="linkedInLogo"/></a></div>
-            <div><a href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"><img src="./icons/tiktok-icon-light-mode.svg" alt="TikTok Logo" class="icons" id="tikTokLogo"/></a></div>
-            <div><a href="https://wa.me/971585155667"><img src="./icons/whatsapp-icon-light-mode.svg" alt="Whatsapp Logo" class="icons" id="whatsappLogo"/></a></div>
+      <p class="footer-txt">Find me</p>
+      <div class="footer-icons">
+        <div>
+          <a href="https://www.instagram.com/the_cocktail_tree/ "
+            ><img
+              src="./icons/instagram-icon-light-mode.svg"
+              alt="Instagram Logo"
+              class="icons"
+              id="instagramLogo"
+          /></a>
         </div>
-    </div><!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
-<script src="./about.js"></script>
-</body>
+        <div>
+          <a href="https://www.linkedin.com/company/the-cocktail-tree/?"
+            ><img
+              src="./icons/linkedin-icon-light-mode.svg"
+              alt="LinkedIn Logo"
+              class="icons"
+              id="linkedInLogo"
+          /></a>
+        </div>
+        <div>
+          <a
+            href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"
+            ><img
+              src="./icons/tiktok-icon-light-mode.svg"
+              alt="TikTok Logo"
+              class="icons"
+              id="tikTokLogo"
+          /></a>
+        </div>
+        <div>
+          <a href="https://wa.me/971585155667"
+            ><img
+              src="./icons/whatsapp-icon-light-mode.svg"
+              alt="Whatsapp Logo"
+              class="icons"
+              id="whatsappLogo"
+          /></a>
+        </div>
+      </div>
+    </div>
+    <!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
+    <script type="module" src="./about.js"></script>
+  </body>
 </html>
+<!-- type="module"  -->
