--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,100 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vardges's Works</title>
-    <link rel="stylesheet" href="./portfolio.css" type="text/css">
-</head>
-<body>
-<!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
-<header>
-    <aside class="left-logo-mode">
-      <a href="./index.html"><img src="./icons/the-logo-light-mode.svg" alt="My Logo" id="logoIcon"></a>
-        
+    <link rel="stylesheet" href="./portfolio.css" type="text/css" />
+  </head>
+  <body data-mode="light">
+    <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
+    <header>
+      <aside class="left-logo-mode">
+        <a href="./index.html"
+          ><img
+            src="./icons/the-logo-light-mode.svg"
+            alt="My Logo"
+            id="logoIcon"
+        /></a>
+
         <div class="mode-with-logo">
-            <div class="mode">
-                <input type="checkbox" id="lightMode">
-                <label for="lightMode"></label>
-            </div>
-            <p id="modeTitle"class="light-mode-text">Cool Mode</p>
+          <div class="mode">
+            <input type="checkbox" id="lightMode" />
+            <label for="lightMode"></label>
+          </div>
+          <p id="modeTitle" class="light-mode-text">Cool Mode</p>
         </div>
-  </aside>
-    <ul class="nav-link">
-      <li><a href="./index.html" class="non-active">Home</a></li>
-      <li><a href="./About.html" class="non-active">About</a></li>
-      <li><a href="./Portfolio.html" class="active">Portfolio</a></li>
-      <li><a href="./Contacts.html" class="non-active">Contact</a></li>
-    </ul>
-  </header>
-  <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
+      </aside>
+      <ul class="nav-link">
+        <li><a href="./index.html" class="non-active">Home</a></li>
+        <li><a href="./About.html" class="non-active">About</a></li>
+        <li><a href="./Portfolio.html" class="active">Portfolio</a></li>
+        <li><a href="./Contacts.html" class="non-active">Contact</a></li>
+      </ul>
+    </header>
+    <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
 
-<!--👇👇👇-Main Content-👇👇👇-Start-👇👇👇--> 
-<div class="main-content">
-<div class="content-title"><p>My Works</p></div>
-<div class="works-wrapper">
+    <!--👇👇👇-Main Content-👇👇👇-Start-👇👇👇-->
+    <div class="main-content">
+      <div class="content-title"><p>My Works</p></div>
+      <div class="works-wrapper">
+        <div class="box-1">
+          <ul class="hover-links">
+            <li>
+              <a href="https://github.com/Vardges-vaka/latest-portfolio"
+                ><img src="./icons/github-icon.svg" alt="Github Icon"
+              /></a>
+            </li>
+            <li>
+              <a href="https://vardges-vaka.github.io/latest-portfolio/"
+                ><img src="./icons/export-icon.svg" alt="Export Icon"
+              /></a>
+            </li>
+          </ul>
+          <a href="#"></a>
+        </div>
 
-    <div class="box-1">
+        <div class="box-2">
+          <ul class="hover-links">
+            <li>
+              <a href="#"
+                ><img src="./icons/github-icon.svg" alt="Github Icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./icons/export-icon.svg" alt="Export Icon"
+              /></a>
+            </li>
+          </ul>
+          <a href="#"></a>
+        </div>
 
-        <ul class="hover-links">
-            <li><a href="https://github.com/Vardges-vaka/latest-portfolio"><img src="./icons/github-icon.svg" alt="Github Icon"></a></li>
-            <li><a href="https://vardges-vaka.github.io/latest-portfolio/"><img src="./icons/export-icon.svg" alt="Export Icon"></a></li>
-        </ul>
-        <a href="#"></a>
+        <div class="box-3">
+          <ul class="hover-links">
+            <li>
+              <a href="#"
+                ><img src="./icons/github-icon.svg" alt="Github Icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./icons/export-icon.svg" alt="Export Icon"
+              /></a>
+            </li>
+          </ul>
+          <a href="#"></a>
+        </div>
+
+        <div class="box-4">
+          <ul class="hover-links">
+            <li>
+              <a href="#"
+                ><img src="./icons/github-icon.svg" alt="Github Icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./icons/export-icon.svg" alt="Export Icon"
+              /></a>
+            </li>
+          </ul>
+          <a href="#"></a>
+        </div>
+
+        <div class="box-5">
+          <ul class="hover-links">
+            <li>
+              <a href="#"
+                ><img src="./icons/github-icon.svg" alt="Github Icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./icons/export-icon.svg" alt="Export Icon"
+              /></a>
+            </li>
+          </ul>
+          <a href="#"></a>
+        </div>
+
+        <div class="box-6">
+          <ul class="hover-links">
+            <li>
+              <a href="#"
+                ><img src="./icons/github-icon.svg" alt="Github Icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="./icons/export-icon.svg" alt="Export Icon"
+              /></a>
+            </li>
+          </ul>
+          <a href="#"></a>
+        </div>
+      </div>
     </div>
-
-    <div class="box-2">
-        <ul class="hover-links">
-            <li><a href="#"><img src="./icons/github-icon.svg" alt="Github Icon"></a></li>
-            <li><a href="#"><img src="./icons/export-icon.svg" alt="Export Icon"></a></li>
-        </ul>
-        <a href="#"></a>
+    <hr class="line" />
+    <!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
+    <div class="footer">
+      <p class="footer-txt">Find me</p>
+      <div class="footer-icons">
+        <div>
+          <a href="https://www.instagram.com/the_cocktail_tree/ "
+            ><img
+              src="./icons/instagram-icon-light-mode.svg"
+              alt="Instagram Logo"
+              class="icons"
+              id="instagramLogo"
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/company/the-cocktail-tree/?"
+            ><img
+              src="./icons/linkedin-icon-light-mode.svg"
+              alt="LinkedIn Logo"
+              class="icons"
+              id="linkedInLogo"
+          /></a>
+        </div>
+        <div>
+          <a
+            href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"
+            ><img
+              src="./icons/tiktok-icon-light-mode.svg"
+              alt="TikTok Logo"
+              class="icons"
+              id="tikTokLogo"
+          /></a>
+        </div>
+        <div>
+          <a href="https://wa.me/971585155667"
+            ><img
+              src="./icons/whatsapp-icon-light-mode.svg"
+              alt="Whatsapp Logo"
+              class="icons"
+              id="whatsappLogo"
+          /></a>
+        </div>
+      </div>
     </div>
-
-    <div class="box-3">
-        <ul class="hover-links">
-            <li><a href="#"><img src="./icons/github-icon.svg" alt="Github Icon"></a></li>
-            <li><a href="#"><img src="./icons/export-icon.svg" alt="Export Icon"></a></li>
-        </ul>
-        <a href="#"></a>
-    </div>
-
-    <div class="box-4">
-        <ul class="hover-links">
-            <li><a href="#"><img src="./icons/github-icon.svg" alt="Github Icon"></a></li>
-            <li><a href="#"><img src="./icons/export-icon.svg" alt="Export Icon"></a></li>
-        </ul>
-        <a href="#"></a>
-    </div>
-
-    <div class="box-5">
-        <ul class="hover-links">
-            <li><a href="#"><img src="./icons/github-icon.svg" alt="Github Icon"></a></li>
-            <li><a href="#"><img src="./icons/export-icon.svg" alt="Export Icon"></a></li>
-        </ul>
-        <a href="#"></a>
-    </div>
-
-    <div class="box-6">
-        <ul class="hover-links">
-            <li><a href="#"><img src="./icons/github-icon.svg" alt="Github Icon"></a></li>
-            <li><a href="#"><img src="./icons/export-icon.svg" alt="Export Icon"></a></li>
-        </ul>
-        <a href="#"></a>
-    </div>
-</div>
-</div>
-<hr class="line">
-<!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
-<div class="footer">
-    <p class="footer-txt">Find me</p>
-    <div class="footer-icons">
-        <div><a href="https://www.instagram.com/the_cocktail_tree/ "><img src="./icons/instagram-icon-light-mode.svg" alt="Instagram Logo" class="icons" id="instagramLogo"/></a> </DIv>
-        <div><a href="https://www.linkedin.com/company/the-cocktail-tree/?"><img src="./icons/linkedin-icon-light-mode.svg" alt="LinkedIn Logo" class="icons" id="linkedInLogo"/></a></div>
-        <div><a href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"><img src="./icons/tiktok-icon-light-mode.svg" alt="TikTok Logo" class="icons" id="tikTokLogo"/></a></div>
-        <div><a href="https://wa.me/971585155667"><img src="./icons/whatsapp-icon-light-mode.svg" alt="Whatsapp Logo" class="icons" id="whatsappLogo"/></a></div>
-    </div>
-  </div><!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
-    <script src="./portfolio.js"></script>
-</body>
+    <!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
+    <script type="module" src="./portfolio.js"></script>
+  </body>
 </html>
