--- a/index.html
+++ b/index.html
@@ -1,75 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vardges's Portfolio</title>
-    <link rel="stylesheet" href="./index.css" type="text/css">
-</head>
-<body>
-<!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
-<header>
-  <aside class="left-logo-mode">
-    <a href="./index.html"><img src="./icons/the-logo-light-mode.svg" alt="My Logo" id="logoIcon"></a>
-      
-      <div class="mode-with-logo">
+    <link rel="stylesheet" href="./index.css" type="text/css" />
+  </head>
+  <body data-mode="light">
+    <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
+    <header>
+      <aside class="left-logo-mode">
+        <a href="./index.html"
+          ><img
+            src="./icons/the-logo-light-mode.svg"
+            alt="My Logo"
+            id="logoIcon"
+        /></a>
+
+        <div class="mode-with-logo">
           <div class="mode">
-              <input type="checkbox" id="lightMode">
-              <label for="lightMode"></label>
+            <input type="checkbox" id="lightMode" />
+            <label for="lightMode"></label>
           </div>
-          <p id="modeTitle"class="light-mode-text">Cool Mode</p>
-      </div>
-</aside>
-  <ul class="nav-link">
-    <li><a href="./index.html" class="active">Home</a></li>
-    <li><a href="./About.html" class="non-active">About</a></li>
-    <li><a href="./Portfolio.html" class="non-active">Portfolio</a></li>
-    <li><a href="./Contacts.html" class="non-active">Contact</a></li>
-  </ul>
-</header>
-<!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
-<div class="main-content">
-<section class="content">
-  <div class="hero">
-        <div>
+          <p id="modeTitle" class="light-mode-text">Cool Mode</p>
+        </div>
+      </aside>
+      <ul class="nav-link">
+        <li><a href="./index.html" class="active">Home</a></li>
+        <li><a href="./About.html" class="non-active">About</a></li>
+        <li><a href="./Portfolio.html" class="non-active">Portfolio</a></li>
+        <li><a href="./Contacts.html" class="non-active">Contact</a></li>
+      </ul>
+    </header>
+    <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
+    <div class="main-content">
+      <section class="content">
+        <div class="hero">
+          <div>
             <p class="hero-title">Hey there,</p>
             <p class="hero-title">I'm Vardges</p>
             <p class="hero-role">Full Stack Developer Extraordinaire</p>
             <p class="hero-doc">
-                Hi, I'm Vardges, your friendly neighborhood code wizard. 
-                With a knack for turning coffee into code and ideas into stunning websites, 
-                I blend creativity with technical wizardry. From crafting pixel-perfect 
-                front-ends to engineering robust back-ends, I do it all with a smile (and a few jokes). 
-                Let’s build something amazing together—because life’s too short for boring websites!
+              Hi, I'm Vardges, your friendly neighborhood code wizard. With a
+              knack for turning coffee into code and ideas into stunning
+              websites, I blend creativity with technical wizardry. From
+              crafting pixel-perfect front-ends to engineering robust back-ends,
+              I do it all with a smile (and a few jokes). Let’s build something
+              amazing together—because life’s too short for boring websites!
             </p>
             <div class="btns-container">
               <div class="btnContainer">
-                <button 
-                id="hireMeBtn" 
-                class="hire-me-btn">Hire me</button>
-            </div>
+                <button id="hireMeBtn" class="hire-me-btn">Hire me</button>
+              </div>
               <div class="btnContainer">
-                <button 
-                id="letsTalkBtn" 
-                class="lets-talk-btn">Lets Talk</button>
-              </div>            
+                <button id="letsTalkBtn" class="lets-talk-btn">
+                  Lets Talk
+                </button>
+              </div>
             </div>
           </div>
-    </div> 
-  <div class="me"><img id="crtAvatar" src="./images/cartoonize-avatar-light-mode.png" alt="My Portrait" /></div>
-</section>
-</div>
-<hr class="line">
-<!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
-<div class="footer">
-  <p class="footer-txt">Find me</p>
-  <div class="footer-icons">
-      <div><a href="https://www.instagram.com/the_cocktail_tree/ "><img src="./icons/instagram-icon-light-mode.svg" alt="Instagram Logo" class="icons" id="instagramLogo"/></a> </DIv>
-      <div><a href="https://www.linkedin.com/company/the-cocktail-tree/?"><img src="./icons/linkedin-icon-light-mode.svg" alt="LinkedIn Logo" class="icons" id="linkedInLogo"/></a></div>
-      <div><a href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"><img src="./icons/tiktok-icon-light-mode.svg" alt="TikTok Logo" class="icons" id="tikTokLogo"/></a></div>
-      <div><a href="https://wa.me/971585155667"><img src="./icons/whatsapp-icon-light-mode.svg" alt="Whatsapp Logo" class="icons" id="whatsappLogo"/></a></div>
-  </div>
-</div><!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
-<script src="./index.js"></script>  
-</body>
+        </div>
+        <div class="me">
+          <img
+            id="crtAvatar"
+            src="./images/cartoonize-avatar-light-mode.png"
+            alt="My Portrait" />
+        </div>
+      </section>
+    </div>
+    <hr class="line" />
+    <!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
+    <div class="footer">
+      <p class="footer-txt">Find me</p>
+      <div class="footer-icons">
+        <div>
+          <a href="https://www.instagram.com/the_cocktail_tree/ "
+            ><img
+              src="./icons/instagram-icon-light-mode.svg"
+              alt="Instagram Logo"
+              class="icons"
+              id="instagramLogo"
+          /></a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/company/the-cocktail-tree/?"
+            ><img
+              src="./icons/linkedin-icon-light-mode.svg"
+              alt="LinkedIn Logo"
+              class="icons"
+              id="linkedInLogo"
+          /></a>
+        </div>
+        <div>
+          <a
+            href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"
+            ><img
+              src="./icons/tiktok-icon-light-mode.svg"
+              alt="TikTok Logo"
+              class="icons"
+              id="tikTokLogo"
+          /></a>
+        </div>
+        <div>
+          <a href="https://wa.me/971585155667"
+            ><img
+              src="./icons/whatsapp-icon-light-mode.svg"
+              alt="Whatsapp Logo"
+              class="icons"
+              id="whatsappLogo"
+          /></a>
+        </div>
+      </div>
+    </div>
+    <!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
+    <script type="module" src="./index.js"></script>
+  </body>
 </html>
