Organized and Separated only the header is missing.

--- a/Contacts.html
+++ b/Contacts.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacting Vardges</title>
     <link rel="stylesheet" href="./Contacts.css" type="text/css" />
+    <link rel="stylesheet" href="./index.css" type="text/css" />
   </head>
   <body data-mode="light">
     <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
@@ -16,7 +17,6 @@
             alt="My Logo"
             id="logoIcon"
         /></a>
-
         <div class="mode-with-logo">
           <div class="mode">
             <input type="checkbox" id="lightMode" />
@@ -67,50 +67,7 @@
       </div>
       <hr class="line" />
       <!---Form👈👈👈-Form-👈👈👈👈👈👈-->
-      <!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
-      <div class="footer">
-        <p class="footer-txt">Find me</p>
-        <div class="footer-icons">
-          <div>
-            <a href="https://www.instagram.com/the_cocktail_tree/ "
-              ><img
-                src="./icons/instagram-icon-light-mode.svg"
-                alt="Instagram Logo"
-                class="icons"
-                id="instagramLogo"
-            /></a>
-          </div>
-          <div>
-            <a href="https://www.linkedin.com/company/the-cocktail-tree/?"
-              ><img
-                src="./icons/linkedin-icon-light-mode.svg"
-                alt="LinkedIn Logo"
-                class="icons"
-                id="linkedInLogo"
-            /></a>
-          </div>
-          <div>
-            <a
-              href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"
-              ><img
-                src="./icons/tiktok-icon-light-mode.svg"
-                alt="TikTok Logo"
-                class="icons"
-                id="tikTokLogo"
-            /></a>
-          </div>
-          <div>
-            <a href="https://wa.me/971585155667"
-              ><img
-                src="./icons/whatsapp-icon-light-mode.svg"
-                alt="Whatsapp Logo"
-                class="icons"
-                id="whatsappLogo"
-            /></a>
-          </div>
-        </div>
-      </div>
-      <!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
+      <div id="footer-container"></div>
     </section>
     <script type="module" src="./contacts.js"></script>
   </body>
