--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vardges's Works</title>
     <link rel="stylesheet" href="./portfolio.css" type="text/css" />
+    <link rel="stylesheet" href="./index.css" type="text/css" />
   </head>
   <body data-mode="light">
     <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
@@ -35,151 +36,112 @@
     <!---☝☝☝-Header-☝☝☝-end-☝☝☝-- -->
 
     <!--👇👇👇-Main Content-👇👇👇-Start-👇👇👇-->
-    <div class="main-content">
-      <div class="content-title"><p>My Works</p></div>
-      <div class="works-wrapper">
-        <div class="box-1">
-          <ul class="hover-links">
-            <li>
-              <a href="https://github.com/Vardges-vaka/latest-portfolio"
-                ><img src="./icons/github-icon.svg" alt="Github Icon"
-              /></a>
-            </li>
-            <li>
-              <a href="https://vardges-vaka.github.io/latest-portfolio/"
-                ><img src="./icons/export-icon.svg" alt="Export Icon"
-              /></a>
-            </li>
-          </ul>
-          <a href="#"></a>
-        </div>
+    <div class="main-content-parent">
+      <div class="main-content-portfolio">
+        <div class="content-title"><p>My Works</p></div>
+        <div class="works-wrapper">
+          <div class="box-1">
+            <ul class="hover-links">
+              <li>
+                <a href="https://github.com/Vardges-vaka/latest-portfolio"
+                  ><img src="./icons/github-icon.svg" alt="Github Icon"
+                /></a>
+              </li>
+              <li>
+                <a href="https://vardges-vaka.github.io/latest-portfolio/"
+                  ><img src="./icons/export-icon.svg" alt="Export Icon"
+                /></a>
+              </li>
+            </ul>
+            <a href="#"></a>
+          </div>
 
-        <div class="box-2">
-          <ul class="hover-links">
-            <li>
-              <a href="#"
-                ><img src="./icons/github-icon.svg" alt="Github Icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./icons/export-icon.svg" alt="Export Icon"
-              /></a>
-            </li>
-          </ul>
-          <a href="#"></a>
-        </div>
+          <div class="box-2">
+            <ul class="hover-links">
+              <li>
+                <a href="#"
+                  ><img src="./icons/github-icon.svg" alt="Github Icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./icons/export-icon.svg" alt="Export Icon"
+                /></a>
+              </li>
+            </ul>
+            <a href="#"></a>
+          </div>
 
-        <div class="box-3">
-          <ul class="hover-links">
-            <li>
-              <a href="#"
-                ><img src="./icons/github-icon.svg" alt="Github Icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./icons/export-icon.svg" alt="Export Icon"
-              /></a>
-            </li>
-          </ul>
-          <a href="#"></a>
-        </div>
+          <div class="box-3">
+            <ul class="hover-links">
+              <li>
+                <a href="#"
+                  ><img src="./icons/github-icon.svg" alt="Github Icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./icons/export-icon.svg" alt="Export Icon"
+                /></a>
+              </li>
+            </ul>
+            <a href="#"></a>
+          </div>
 
-        <div class="box-4">
-          <ul class="hover-links">
-            <li>
-              <a href="#"
-                ><img src="./icons/github-icon.svg" alt="Github Icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./icons/export-icon.svg" alt="Export Icon"
-              /></a>
-            </li>
-          </ul>
-          <a href="#"></a>
-        </div>
+          <div class="box-4">
+            <ul class="hover-links">
+              <li>
+                <a href="#"
+                  ><img src="./icons/github-icon.svg" alt="Github Icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./icons/export-icon.svg" alt="Export Icon"
+                /></a>
+              </li>
+            </ul>
+            <a href="#"></a>
+          </div>
 
-        <div class="box-5">
-          <ul class="hover-links">
-            <li>
-              <a href="#"
-                ><img src="./icons/github-icon.svg" alt="Github Icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./icons/export-icon.svg" alt="Export Icon"
-              /></a>
-            </li>
-          </ul>
-          <a href="#"></a>
-        </div>
+          <div class="box-5">
+            <ul class="hover-links">
+              <li>
+                <a href="#"
+                  ><img src="./icons/github-icon.svg" alt="Github Icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./icons/export-icon.svg" alt="Export Icon"
+                /></a>
+              </li>
+            </ul>
+            <a href="#"></a>
+          </div>
 
-        <div class="box-6">
-          <ul class="hover-links">
-            <li>
-              <a href="#"
-                ><img src="./icons/github-icon.svg" alt="Github Icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="./icons/export-icon.svg" alt="Export Icon"
-              /></a>
-            </li>
-          </ul>
-          <a href="#"></a>
+          <div class="box-6">
+            <ul class="hover-links">
+              <li>
+                <a href="#"
+                  ><img src="./icons/github-icon.svg" alt="Github Icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="./icons/export-icon.svg" alt="Export Icon"
+                /></a>
+              </li>
+            </ul>
+            <a href="#"></a>
+          </div>
+        </div>
+        <div class="line-container">
+          <hr class="line-portfolio" />
         </div>
       </div>
     </div>
-    <hr class="line" />
-    <!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
-    <div class="footer">
-      <p class="footer-txt">Find me</p>
-      <div class="footer-icons">
-        <div>
-          <a href="https://www.instagram.com/the_cocktail_tree/ "
-            ><img
-              src="./icons/instagram-icon-light-mode.svg"
-              alt="Instagram Logo"
-              class="icons"
-              id="instagramLogo"
-          /></a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/company/the-cocktail-tree/?"
-            ><img
-              src="./icons/linkedin-icon-light-mode.svg"
-              alt="LinkedIn Logo"
-              class="icons"
-              id="linkedInLogo"
-          /></a>
-        </div>
-        <div>
-          <a
-            href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"
-            ><img
-              src="./icons/tiktok-icon-light-mode.svg"
-              alt="TikTok Logo"
-              class="icons"
-              id="tikTokLogo"
-          /></a>
-        </div>
-        <div>
-          <a href="https://wa.me/971585155667"
-            ><img
-              src="./icons/whatsapp-icon-light-mode.svg"
-              alt="Whatsapp Logo"
-              class="icons"
-              id="whatsappLogo"
-          /></a>
-        </div>
-      </div>
-    </div>
-    <!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
+    <div id="footer-container"></div>
     <script type="module" src="./portfolio.js"></script>
   </body>
 </html>
