--- a/index.html
+++ b/index.html
@@ -69,50 +69,7 @@
       </section>
     </div>
     <hr class="line" />
-    <!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
-    <div class="footer">
-      <p class="footer-txt">Find me</p>
-      <div class="footer-icons">
-        <div>
-          <a href="https://www.instagram.com/the_cocktail_tree/ "
-            ><img
-              src="./icons/instagram-icon-light-mode.svg"
-              alt="Instagram Logo"
-              class="icons"
-              id="instagramLogo"
-          /></a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/company/the-cocktail-tree/?"
-            ><img
-              src="./icons/linkedin-icon-light-mode.svg"
-              alt="LinkedIn Logo"
-              class="icons"
-              id="linkedInLogo"
-          /></a>
-        </div>
-        <div>
-          <a
-            href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"
-            ><img
-              src="./icons/tiktok-icon-light-mode.svg"
-              alt="TikTok Logo"
-              class="icons"
-              id="tikTokLogo"
-          /></a>
-        </div>
-        <div>
-          <a href="https://wa.me/971585155667"
-            ><img
-              src="./icons/whatsapp-icon-light-mode.svg"
-              alt="Whatsapp Logo"
-              class="icons"
-              id="whatsappLogo"
-          /></a>
-        </div>
-      </div>
-    </div>
-    <!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
+    <div id="footer-container"></div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
