--- a/About.html
+++ b/About.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Vardges</title>
     <link rel="stylesheet" href="./About.css" type="text/css" />
+    <link rel="stylesheet" href="./index.css" type="text/css" />
   </head>
   <body data-mode="light">
     <!--👇👇👇-header-👇👇👇-Start-👇👇👇-->
@@ -61,7 +62,7 @@
           that exceed expectations, just like the perfect cocktail.
         </p>
       </div>
-      <div class="btns-container">
+      <div class="btnss-container">
         <div class="btnContainer">
           <button id="hireMeBtn" class="hire-me-btn">Hire me</button>
         </div>
@@ -151,51 +152,7 @@
       </div>
     </section>
     <hr class="line" />
-    <!-- -👇👇👇-FOOTER-👇👇👇-START-👇👇👇--->
-    <div class="footer">
-      <p class="footer-txt">Find me</p>
-      <div class="footer-icons">
-        <div>
-          <a href="https://www.instagram.com/the_cocktail_tree/ "
-            ><img
-              src="./icons/instagram-icon-light-mode.svg"
-              alt="Instagram Logo"
-              class="icons"
-              id="instagramLogo"
-          /></a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/company/the-cocktail-tree/?"
-            ><img
-              src="./icons/linkedin-icon-light-mode.svg"
-              alt="LinkedIn Logo"
-              class="icons"
-              id="linkedInLogo"
-          /></a>
-        </div>
-        <div>
-          <a
-            href="https://www.tiktok.com/@the_cocktail_tree?is_from_webapp=1&sender_device=pc"
-            ><img
-              src="./icons/tiktok-icon-light-mode.svg"
-              alt="TikTok Logo"
-              class="icons"
-              id="tikTokLogo"
-          /></a>
-        </div>
-        <div>
-          <a href="https://wa.me/971585155667"
-            ><img
-              src="./icons/whatsapp-icon-light-mode.svg"
-              alt="Whatsapp Logo"
-              class="icons"
-              id="whatsappLogo"
-          /></a>
-        </div>
-      </div>
-    </div>
-    <!---☝☝☝-FOOTER-☝☝☝-END-☝☝☝-- -->
+    <div id="footer-container"></div>
     <script type="module" src="./about.js"></script>
   </body>
 </html>
-<!-- type="module"  -->
